force-app/main/default/objects/KYC_Verification__c/KYC_Verification__c.object-meta.xml
<CustomObject>
    <label>KYC Verification</label>
    <nameField>
        <label>KYC Verification Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>KYC Verifications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>