force-app/main/default/objects/KYC_Verification__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>KYC Verifications</relationshipLabel>
    <relationshipName>KYC_Verifications</relationshipName>
    <type>Lookup</type>
</CustomField>