force-app/main/default/objects/KYC_Verification__c/fields/KYC_Type__c.field-meta.xml
<CustomField>
    <fullName>KYC_Type__c</fullName>
    <label>KYC Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Document Upload</fullName>
            </value>
            <value>
                <fullName>Video Call</fullName>
            </value>
            <value>
                <fullName>In-Person</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>